stages/stage2/set2-ingress/k8s/ingress/00-traefik-rbac-and-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  namespace: kube-system
spec:
  controller: traefik.io/ingress-controller
