stages/stage2/set2-ingress/k8s/ingress/02-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: apollo-airlines-ui
spec:
  ingressClassName: traefik
  rules:
    - host: frontend.apollo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
