stages/stage2/set2-ingress/k8s/ingress/04-ingress-flight.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight
  namespace: apollo-airlines-apps
spec:
  ingressClassName: traefik
  rules:
    - host: flight.apollo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight
                port:
                  number: 8081
